--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -1,16 +1,17 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using System.Data
+@using Microsoft.AspNetCore.Components.Web
 @using Reversi.Logic
 
 <h3>Grid Component</h3>
 
 <table>
-    @foreach (var rowIndex in DisplayedBoard)
+    @for (int row = 0; row < DisplayedBoard.Length; row++)
     {
         <tr>
-            @foreach (var character in rowIndex)
+            @for (int col = 0; col < DisplayedBoard[row].Length; col++)
             {
                 <td>
-                    <TileComponent message="@character.ToString()"></TileComponent>
+                    <TileComponent message="@DisplayedBoard[row][col].ToString()" row="@row" column="@col"></TileComponent>
                 </td>
             }
         </tr>
@@ -20,5 +21,6 @@
 
     [Parameter]
     public string[] DisplayedBoard { get; set; }
-   
+    
+
 }
