--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Reversi.Web.BlazorComponents;
-@model string[]
-
+@using Reversi.Web.Services
+@using Reversi.Web.Services.Interfaces
+@inject IGameService GameService
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -9,5 +10,5 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered, new {DisplayedBoard = Model}))
-@*@(await Html.RenderComponentAsync<ButtonComponent>(RenderMode.ServerPrerendered, new { message="0,1" }))*@
+
+@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered))
