implemented GameInformation razor component

--- a/Reversi.Web/BlazorComponents/GameInformation.razor
+++ b/Reversi.Web/BlazorComponents/GameInformation.razor
@@ -8,4 +8,8 @@
 @code {
     public string CurrentPlayer => GameService.GetCurrentPlayer();
 
+    public void Refresh()
+    {
+        StateHasChanged();
+    }
 }
