--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -7,8 +7,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Reversi Game</h1>
 </div>
 
-@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered))
+<center>@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered))</center>
