--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -2,6 +2,7 @@
 @using Reversi.Web.Services.Interfaces
 @inject IGameService GameService
 
+<MessageComponent @ref="_messageComponent" />
 <GameInformation  @ref="_gameInformation" />
 
 <table>
@@ -20,6 +21,7 @@
 @code {
 
     private GameInformation _gameInformation;
+    private MessageComponent _messageComponent;
 
     public string[] DisplayedBoard => GameService.GetOutput();
 
@@ -30,6 +32,7 @@
 
         GameService.PlaceCounter(row, column);
         _gameInformation.Refresh();
+        _messageComponent.Refresh();
     }
 
 }
