Proof of concept for using signalR (chat created)

--- a/Reversi.Web/Views/Home/Index.cshtml
+++ b/Reversi.Web/Views/Home/Index.cshtml
@@ -11,3 +11,4 @@
 </div>
 
 <center>@(await Html.RenderComponentAsync<GridComponent>(RenderMode.ServerPrerendered))</center>
+<center>@(await Html.RenderComponentAsync<Chat>(RenderMode.ServerPrerendered))</center>
