--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -58,7 +58,7 @@
 		await hubConnection.StartAsync();
 	}
 	async Task Send() =>
-		await hubConnection.SendAsync("SendUpdate");
+		await hubConnection.SendAsync("SendUpdate", "BLACK");
 
 	public bool IsConnected =>
 		hubConnection.State == HubConnectionState.Connected;
