made connection ID as a mandatory argument of PlaceCounter method. Fixed initial moves to work without connection ID. Web application is failing.

--- a/Reversi.Web/BlazorComponents/GridComponent.razor
+++ b/Reversi.Web/BlazorComponents/GridComponent.razor
@@ -32,7 +32,7 @@
         var row = int.Parse(move.Split(',')[0]);
         var column = int.Parse(move.Split(',')[1]);
 
-        GameService.PlaceCounter(row, column);
+        GameService.PlaceCounter(row, column, hubConnection.ConnectionId);
         if (GameService.IsLastMoveValid())
         {
             await Send();
