update to ui look for information

--- a/Reversi.Web/BlazorComponents/GameInformation.razor
+++ b/Reversi.Web/BlazorComponents/GameInformation.razor
@@ -1,7 +1,7 @@
 ﻿@using Reversi.Web.Services.Interfaces;
 @using Microsoft.AspNetCore.Components.Web
 
-<b>Current Player: </b>
+<b>Player's Turn: </b>
 <label>@CurrentPlayer</label>
 
 @code {
