--- a/Reversi.Web/BlazorComponents/Chat.razor
+++ b/Reversi.Web/BlazorComponents/Chat.razor
@@ -29,7 +29,7 @@
 
 @code {
 	private HubConnection hubConnection;
-	private List<string> messages = new List<string>();
+	private List<string> messages = new();
 	private string userInput;
 	private string messageInput;
 
